# RayMarcher

./: ABOUT  ABOUT.html  CMakeLists.txt  README  README.md  RayMarcher  resources.qrc
examples/: cube_sphere_diff.py  cube_sphere_diff.scene  examplescene.scene  random_example.py  random_example.scene  smooth_union.py  smooth_union.scene  spheres_intersection.py  spheres_intersection.scene
shaders/: raymarcher.frag  raymarchergpu.frag  vertexshader.vert
src/: lazy.cpp  lazy.h  main.cpp  mainwindow.cpp  mainwindow.h  scene.cpp  scene.h  settingsmenu.cpp  settingsmenu.h  shaderrenderer.cpp  shaderrenderer.h
src/shaders/: vertexshader.vert
